[package]
name = "twitter_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0" , features = ["blocking"] }
regex = "1.10.4"
colored = "2"
uuid = { version = "1", features = ["v4"] }
image = "0"